First pass at adding code of conduct & syllabus reorg

--- a/igm_mycourses_templates/CodeOfConduct.html
+++ b/igm_mycourses_templates/CodeOfConduct.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="custom.css">
 
-    <title>Course Policies</title>
+    <title>Course Code of Conduct</title>
 </head>
 
 <body>
@@ -22,33 +22,52 @@
         <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
     </div>
 
-    <h2>Assignment Feedback and Grading</h2>
-    <p>It takes time to grade assignments and provide useful feedback &ndash; much more time than students may expect. Large assignments may take up to 3 weeks to be fully graded.</p>
+    <h2>Course Code of Conduct</h2>
+    <h4>At all times:</h4>
+    <ul>
+        <li>Be welcoming to everyone</li>
+        <li>Listen to understand</li>
+        <li>No one is born knowing everything, kindly teach it to each other</li>
+        <li>Be competitive with yourself, not others</li>
+        <li>Encourage experimentation and creativity</li>
+        <li>Empower people to solve their own problems</li>
+        <li>Demonstrate how much you can help, not how much you know</li>
+        <li>It's more than ok to ask for help</li>
+        <li>When in doubt, ask questions, someone else is probably wondering too</li>
+        <li>When talking about someone, say nothing you wouldn't say directly to them</li>
+        <li>Be mindful of who else is in the lab and your impact on the space</li>
+        <li>Do NOT do someone's work for them (this ruins the learning process).</li>
+        <li>Do NOT explain exactly how to solve a problem (this ruins the learning process).</li>
+        <li>Do NOT use any discriminatory language. <em>You will be asked to leave and may face other academic punishments. I have ZERO tolerance for discrimination.</em></li>
+        <li>DO ask questions about concepts, homework clarifications, etc.</li>
+        <li>DO have fun. You can do a lot of fun stuff in this course if you're willing to try and this is a great opportunity to get to know your classmates!</li>
+    </ul>
 
-    <h3>Late Policy</h3>
-    <p>Except in documented extenuating circumstances, exceptions to assignment late policies will not be made for any reason. This is a college class and you are expected to manage your time wisely. If you are having problems with an assignment or have an emergency that may make you late in submitting your work, contact me as soon as possible (ideally BEFORE the due date).</p>
+    <h4>In Slack</h4>
+    <p>Within the Slack workspace, all RIT rules still apply and we reserve the right to remove anyone at any time.</p>
+    <ul>
+        <li>DO ask questions about concepts, homework clarifications, etc.</li>
+        <li>DO feel free to answer questions from your peers.</li>
+        <li>Do NOT share large sections of code. Posts such as “Please debug this” and “Here’s my solution” will be considered a violation of the academic integrity policy.</li>
+        <li>DO ask yourself if your message is respectful. If it's disrespectful against any individual or group, you will see consequences.</li>
+        <li>DO share links or examples that seem useful.</li>
+        <li>DO use #random and other general channels to get to know us and your peers!</li>
+    </ul>
 
-    <h3>Challenging Grades</h3>
-    <p>If you challenge a grade, it must be done in a timely manner, within a week of the return of an assignment. Remember that in challenging a grade, the instructor reserves the right to revisit the grading on the entire assignment and may adjust the grade appropriately. This is mentioned not to discourage a student with a legitimate complaint over a grade, but to rather address the often-blatant problem of &ldquo;point weaseling&rdquo; on assignments.</p>
-    <p>At the end of the semester, any questions about the final grading of the course should be raised immediately. Department policy states that a student has one semester to challenge any grade.</p>
 
-    <h3>Incomplete Policy</h3>
-    <p>Incomplete (&ldquo;I&rdquo;) grades are reserved for cases in which the student is making credible course progress, and then something occurs in the student&rsquo;s life that prevents the completion of the course. Incomplete grades are not a mechanism to delay a failing grade nor are they a means to stave off probation or a suspension. For an instructor to grant an incomplete, credible documentation must be provided at the instructor&rsquo;s or school&rsquo;s request.</p>
+    <h2>Relevant RIT Policies</h2>
+    <p>Our course code of conduct is based on several university wide policies and procedures. It is important that you are familiar with all of these!</p>
 
-    <h2>Class Etiquette</h2>
-    <p>Due to time constraints, it is important that you join class each day prepared to work. There will be times when we will discuss topics and issues in the form of a lecture. During this time in the class, you will be expected to take notes about the material being presented. I highly recommend taking hand-written notes during class. During the lecture time, you are also encouraged to ask questions about the topics being discussed or the supplemental readings you have completed.</p>
+    <h3>Diversity, Inclusion, and Respect</h3>
+    <p>RIT has put forth <a href="https://www.rit.edu/academicaffairs/policiesmanual/p050">Policy P05.0 Diversity Statement</a> for all community members. If you have suggestions on how the course can better uphold these principles, I encourage you to reach out to me or a TA.</p>
 
-    <h3>University Guidance for Health/Safety in the Classroom</h3>
-    <p>Faculty will provide details about information specific to specialized classrooms or labs in alignment with overall University policies. Any concerns with these policies should be addressed to faculty or department offices.</p>
-    <p>See the <a href="https://www.rit.edu/ready/rit-safety-plan" target="_blank" rel="noopener">RIT Safety Plan</a> for details about health/safety policies that apply university-wide. </p>
+    <div class="card card-standard">
+        <div class="card-body">
+            <p><em>RIT through its policies and practices is responsible for building an inclusive environment where membership in the community allows for faculty, staff and students to reach their fullest potential, both professionally and personally. RIT is committed to the development, administration and interpretation of policies and procedures in a way that is consistent with our commitment to diversity and is in compliance with federal, state and local laws. RIT’s policies and procedures are administered in a way that supports fair treatment for all faculty, staff, students, and the RIT community at large.</em></p>
+        </div>
+    </div>
 
-    <h3>Missing Class</h3>
-    <p>In the case of an illness or unexpected absence, the student should try to communicate with the faculty in as timely of a manner as possible. When class is missed, it is up to the student to make up work and to acquire any course materials. Absences in any form do not postpone due dates unless agreed upon by the instructor.</p>
-
-    <h3>Class Cancellation</h3>
-    <p>If the faculty cannot attend a class session, students will be contacted via email and cancellation signs will be placed on classroom doors. Explicit instructions for cancellation will be communicated via myCourses and your RIT e-mail.</p>
-
-    <h2>Academic Integrity</h2>
+    <h3>Academic Integrity</h3>
     <p>As an institution of higher learning, RIT expects students to behave honestly and ethically at all times, especially when submitting work for evaluation in conjunction with any course or degree requirement. RIT encourages all students to become familiar with the&nbsp;<a href="https://www.rit.edu/academicaffairs/policiesmanual/p030" target="_blank" rel="noopener">RIT Honor Code</a> and with <a href="https://www.rit.edu/academicaffairs/policiesmanual/d080" target="_blank" rel="noopener">RIT&rsquo;s Academic Integrity Policy</a>.</p>
     <p>The Department of Interactive Games and Media does not condone any form of academic dishonesty. Any act of improperly representing another person&rsquo;s work as one&rsquo;s own (or allowing someone else to represent your work as their own) is construed as an act of academic dishonesty. These acts include but are not limited to, plagiarism in any form or use of information and materials not authorized by the instructor during an examination or for any assignment.</p>
     <p>If a faculty member judges a student to be guilty of any form of academic dishonesty, the student will receive a FAILING GRADE FOR THE COURSE. Academic dishonesty involving the abuse of RIT computing facilities may result in the pursuit of more severe action.</p>
@@ -59,7 +78,7 @@
     <p>COLLUSION means unauthorized collaboration with another person in preparing written work or computer work (including electronic media) offered for credit. The final work submitted by a student must be substantially the work of that student. Collaboration on an assignment is expressly forbidden unless it is explicitly designated as a group project. When there is any doubt, a student should consult the instructor (NOT ANOTHER STUDENT) as to whether some action is considered collusion.</p>
     <p>Whenever there is any question as to whether a particular action is considered academic dishonesty, the instructor should be consulted.</p>
 
-    <h2>Title IX</h2>
+    <h3>Title IX</h3>
     <p>Title IX violations are taken very seriously at RIT. RIT is committed to investigate complaints of sexual discrimination, sexual harassment, sexual assault and other sexual misconduct, and to ensure that appropriate action is taken to stop the behavior, prevent its recurrence and remedy its effects. Please view the <a href="https://www.rit.edu/fa/compliance/content/title-ix" target="_blank" rel="noopener">Title IX Rights &amp; Resources at RIT.</a></p>
     <p>RIT is committed to providing a safe learning environment, free of harassment and discrimination as articulated in our university policies located on our governance website. RIT&rsquo;s policies require faculty to share information about incidents of gender-based discrimination and harassment with RIT&rsquo;s Title IX coordinator or deputy coordinators, regardless of whether the incidents are stated to them in person or shared by students as part of their coursework.</p>
     <p>If you have a concern related to gender-based discrimination and/or harassment and prefer to have a confidential discussion, assistance is available from one of RIT&rsquo;s confidential resources on campus (listed below).</p>
@@ -72,11 +91,5 @@
         <li>The Center for Religious Life &ndash; Schmitt Interfaith Center/Rm1400; 585-475-2137.</li>
         <li>NTID Counseling &amp; Academic Adv. Services &ndash; 2nd Floor Lynden B. Johnson; 585-475-6468 (v), 585-286-4070 (vp).</li>
     </ul>
-
-    <h2>Use of Copyrighted Material</h2>
-    <p>Certain materials used in this course are protected by copyright and may not be copied or distributed by students. You can find more information at <a href="http://www.rit.edu/academicaffairs/policiesmanual/sectionC/C3_2.html" target="_blank" rel="noopener">http://www.rit.edu/academicaffairs/policiesmanual/sectionC/C3_2.html</a>.</p>
-
-    <h2>Emergencies</h2>
-    <p>In the event of a University-wide emergency, course requirements, classes, deadlines and grading schemes are subject to changes that may include alternative delivery methods, alternative methods of interaction with the instructor, class materials, and/or classmates, a revised attendance policy, and a revised calendar and/or grading scheme.</p>
 
 </body></html>
