--- a/igm_mycourses_templates/communications.html
+++ b/igm_mycourses_templates/communications.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS (will eventually be replaced with local CSS file)-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <!-- Template CSS -->
 
     <link rel="stylesheet" href="custom.css">
-    <title>Course Communications Guidelines</title>
+    <title>Communications Guidelines</title>
 </head>
 
 <body>
@@ -15,66 +20,57 @@
         <strong>TEMPLATE</strong>
         <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
     </div>
-    <h2>Contact Information</h2>
-    <div class="table-responsive">
-        <table class="table table-bordered" style="width: 95.6276%;">
-            <tbody>
-                <tr>
-                    <td style="width: 49.6157%;">
-                        <h3>Instructor</h3>
-                        <p><strong>MY NAME</strong>,&nbsp;PRONOUNS<strong><br></strong>TITLE, IGM<br>EMAIL<br>GitHub - xxxx</p>
-                        <p><strong></strong><strong></strong>Office Hours:<br>&nbsp;- XXX<br>&nbsp;- YYY</p>
-                    </td>
-                    <td style="width: 24.2472%;">
-                        <h3>Section XX TA</h3>
-                        <p><strong>NAME</strong>, PRONOUNS<br>EMAIL<br>GitHub - xxxx</p>
-                        <h5></h5>
-                        <h3>Section XX TA</h3>
-                        <p><strong>NAME</strong>, PRONOUNS<br>EMAIL<br>GitHub - xxxx</p>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+
+    <div class="card card-standard">
+        <div class="card-body">
+            <p><strong>All official communications should be done using RIT accounts (email or Slack).<br>Faculty may not be able to respond to requests that do not originate from an RIT account.</strong></p>
+        </div>
     </div>
+
     <h2>Name &amp; Pronouns</h2>
-    <p>Many people go by a name in daily life that is different from their legal name. In this course, we seek to address everyone in the manner that best respects their identity. You are invited (publicly or privately) to share the name and pronouns you wish us to use.</p>
-    <p>Additionally, you can:</p>
-    <ul>
-        <li>Set a "nickname" in myCourses&nbsp; by clicking on your name in the top right corner and selecting "Profile"</li>
-        <li>Change your "preferred name" in other RIT systems by going to <a href="https://start.rit.edu/">https://start.rit.edu/</a>&nbsp;--&gt; Directory Information --&gt; Name Preferences Page</li>
-    </ul>
+    <p>Many people go by a name in daily life that is different from their legal name. In this course, we seek to address everyone in the manner that best respects their identity. You are invited (publicly or privately) to share the name and pronouns you wish us to use and when/how we should use them.</p>
+
+    <p class="tab"><Em>For example, while some professors will want you to use "Professor" or "Dr." with their last name, Prof. Mesh is comfortable with you all using her first name, "Erika", in casual conversations. In written correspondence, please use "Prof. Mesh" and the pronouns she/her when referring to her (i.e. emails, course evals, etc.).</Em></p>
+
+    <p>Additionally, you can change your "preferred name" in other RIT systems by going to the <a href="https://start.rit.edu/">https://start.rit.edu/</a>&nbsp;--&gt; Directory Information --&gt; Name Preferences Page. </p>
+
+    <p class="tab"><em>Note that changing your Preferred Name will change your display name on some mail that goes to home addresses as well as RIT Email, RIT Directories, myCourses, Zoom, Early Alert, SIS, and other campus systems with data feeds from SIS. Only change your Preferred Name if you would like to change it for ALL of these RIT uses.</em></p>
+
     <p>If you would like your name changed in legal documents (transcripts, etc.), complete&nbsp;<a href="https://www.rit.edu/academicaffairs/registrar/change-name" target="_blank" rel="noopener">this form</a> and return it to the Registrar's Office.</p>
 
-    <h2>Office Hours</h2>
-    <p>Office hours offer you the opportunity to ask individual questions about the course material that you may have not had time to ask in class.</p>
-    <p><strong>Open office hours</strong> are held on a first-come-first-served drop-in basis with no appointment necessary. Sometimes office hours become increasingly busy the closer it is to a deadline or the end of the semester. If students are waiting, discussions will be limited to ~10 minutes/student. Plan your use of office hours accordingly.&nbsp;</p>
+    <h2>During Class</h2>
+    <p>Due to time constraints, it is important that you join class each day prepared to work. There will be times when we will discuss topics and issues in the form of a lecture. During this time in the class, you will be expected to take notes about the material being presented. I highly recommend taking hand-written notes during class. During the lecture time, you are also encouraged to ask questions about the topics being discussed or the supplemental readings you have completed.</p>
 
-    <h2>General Questions or Discussions</h2>
-    <p>If you have general questions about the course or an assignment that are not covered in these course documents, please post your questions to a public channel in Slack so all students can benefit from the answer. If, as a student, you can answer a question posed, I encourage you to reply to your classmate.</p>
+    <h3>Missing Class</h3>
+    <p>In the case of an illness or unexpected absence, the student should try to communicate with the faculty in as timely of a manner as possible. When class is missed, it is up to the student to make up work and to acquire any course materials. Absences in any form do not postpone due dates unless agreed upon by the instructor.</p>
 
-    <h2>Personal Topics</h2>
+    <h3>Class Cancellation</h3>
+    <p>If the faculty cannot attend a class session, students will be contacted via email and cancellation signs will be placed on classroom doors. Explicit instructions for cancellation will be communicated via myCourses and your RIT e-mail.</p>
+
+
+    <h2>Outside of Class</h2>
+    <h3>myCourses Announcements</h3>
+    <p>I will provide any course announcements through the Announcements on the Course Home Page. This includes any updates or changes to assignments or other course assignments, as well as general comments about assignment results or discussions. Please check your RIT e-mail &amp; myCourses daily for important notifications.</p>
+
+    <h3>Slack</h3>
+    <p>Slack is a way to <em>extend our time together and build community</em> in a more casual way. People can have discussions or ask questions. Questions may be answered by myself, our TAs, or other students.&nbsp;</p>
+
+    <p class="tab">Slack is NOT a replacement for attending class, studying, doing assignments, etc!</p>
+
+    <p>If you have general questions about the course or an assignment, please post your questions to a public channel in Slack so all students can benefit from the answer. If, as a student, you can answer a question posed, I encourage you to reply to your classmate.</p>
+
+    <h2>Private Communications</h2>
     <p><strong>If you have a question about your particular assignment, grade, etc, please contact me privately.</strong></p>
-    <p><strong>All official communications should be done using RIT accounts (email or Slack).</strong> Furthermore, faculty may not be able to respond to requests that do not originate from an RIT account.</p>
-    <p><strong>I check email and Slack frequently, but Slack DMs are usually the fastest way to reach me.</strong> If you do not receive a response from me within 24 hours, Monday-Friday, contact me again as it is likely I missed your first message. Messages over the weekend may take slightly longer for a response.</p>
+
+    <h3>Slack DMs</h3>
+    <p>I check email frequently, but Slack DMs are usually the fastest way to reach me. If you do not receive a response from me within 24 hours, Monday-Friday, contact me again as it is likely I missed your first message. Messages over the weekend may take slightly longer for a response. Unless a topic is sensitive, I strongly encourage you to copy the TAs on any messages to me by <a href="https://slack.com/help/articles/1500002969782-Add-more-people-to-a-group-direct-message">creating a group DM</a>. The TAs can answer most questions and, regardless, I like them to be "in the loop" as much as possible.</p>
+
+    <h3>Email</h3>
+
     <p><strong>When using email, please make sure to use only the email address noted above.</strong> I do have others associated with RIT, but I do NOT check them! Always include a subject line and be sure to mention the class name and section. It’s also expected that you use complete sentences and punctuation, as well as sign your name.</p>
 
-    <h2>myCourses Announcements</h2>
-    <p>I will provide any course announcements through the Announcements on the Course Home Page. This includes any updates or changes to assignments or other course assignments, as well as general comments about assignment results or discussions. <strong>Please check your RIT e-mail &amp; myCourses daily for important notifications.</strong></p>
+    <h3>Office Hours</h3>
+    <p>Office hours offer you the opportunity to ask individual questions about the course material that you may have not had time to ask in class. Office hours are held on a first-come-first-served drop-in basis with no appointment necessary. Sometimes office hours become increasingly busy the closer it is to a deadline or the end of the semester. If students are waiting, discussions will be limited to ~10 minutes/student. Plan your use of office hours accordingly.&nbsp;</p>
 
-    <h2>Slack</h2>
-    <p><strong>Slack is NOT a replacement for attending class, studying, doing assignments, etc!</strong></p>
-    <p>Slack is a way to <em>extend our time together and build community</em> in a more casual way. People can have discussions or ask questions. Questions may be answered by myself, our TAs, or other students.&nbsp;</p>
-    <p>You can contact me through email if you would like to discuss something privately, but for quick general discussions, I would prefer you use Slack that way everyone can stay connected.</p>
-    <p>Within the Slack workspace, all RIT rules still apply and we reserve the right to remove anyone at any time for any reason.</p>
-    <ul>
-        <li>Do NOT do someone's work for them (this ruins the learning process).</li>
-        <li>Do NOT explain exactly how to solve a problem (this ruins the learning process).</li>
-        <li>Do NOT use any discriminatory language. You will be banned from the server for that and may face other academic punishments. I have ZERO tolerance for discrimination.</li>
-        <li>Do NOT share large sections of code. Posts such as “Please debug this” and “Here’s my solution” will be considered a violation of the academic integrity policy.</li>
-        <li>DO ask yourself if your message is respectful. If it's disrespectful against any individual or group, you will see consequences.</li>
-        <li>DO ask questions about concepts, homework clarifications, etc.</li>
-        <li>DO share links or examples that seem useful.</li>
-        <li>DO have fun. You can do a lot of fun stuff in this course if you're willing to try and this is a great opportunity to get to know your classmates!</li>
-    </ul>
 
 </body></html>
